bisonc++/documentation/manual/demos/errorcalc/parser/parse.output



Production Rules:
    1: input ->    <empty>
    2: input -> input line
    3: line -> '\n'
    4: line -> exp '\n'
    5: line -> error '\n'
    6: exp -> NUM
    7: exp -> exp '+' exp
    8: exp -> exp '-' exp
    9: exp -> exp '*' exp
    10: exp -> exp '/' exp
    11: exp -> '-' exp
    12: exp -> exp '^' exp
    13: exp -> '(' exp ')'
    14: input_$ -> input


GRAMMAR STATES:

State 0

    input_$ ->  . input   (rule 14)
              Lookahead set { <EOF> }

    All production rules (using dot == 0) of:
      input   Lookahead set { errTok_ NUM '-' '\n' '(' <EOF> }

    on input:    shift, and go to state 1

    _default_:   reduce, using production
                1: input ->    <empty>

State 1

    input_$ -> input  .   (rule 14)
              Lookahead set { <EOF> }

    input -> input  . line   (rule 2)
              Lookahead set { errTok_ NUM '-' '\n' '(' <EOF> }

    All production rules (using dot == 0) of:
      line    Lookahead set { errTok_ NUM '-' '\n' '(' <EOF> }
      exp     Lookahead set { '-' '+' '*' '/' '^' '\n' }

    on errTok_:  shift, and go to state 2
    on NUM:      shift, and go to state 3
    on '-':      shift, and go to state 4
    on '\n':     shift, and go to state 6
    on '(':      shift, and go to state 8
    on line:     shift, and go to state 5
    on exp:      shift, and go to state 7

State 2 (inherited terminal: errTok_)

    line -> errTok_  . '\n'   (rule 5)
              Lookahead set { errTok_ NUM '-' '\n' '(' <EOF> }

    on '\n':     shift, and go to state 9

State 3 (inherited terminal: NUM)

    exp -> NUM  .   (rule 6)
              Lookahead set { '-' '+' '*' '/' '^' '\n' ')' }


    _default_:   reduce, using production
                6: exp -> NUM

State 4 (inherited terminal: '-')

    exp -> '-'  . exp   (rule 11)
              Lookahead set { '-' '+' '*' '/' '^' '\n' ')' }

    All production rules (using dot == 0) of:
      exp     Lookahead set { '-' '+' '*' '/' '^' '\n' }

    on NUM:      shift, and go to state 3
    on '-':      shift, and go to state 4
    on '(':      shift, and go to state 8
    on exp:      shift, and go to state 10

State 5

    input -> input line  .   (rule 2)
              Lookahead set { errTok_ NUM '-' '\n' '(' <EOF> }


    _default_:   reduce, using production
                2: input -> input line

State 6 (inherited terminal: '\n')

    line -> '\n'  .   (rule 3)
              Lookahead set { errTok_ NUM '-' '\n' '(' <EOF> }


    _default_:   reduce, using production
                3: line -> '\n'

State 7

    line -> exp  . '\n'   (rule 4)
              Lookahead set { errTok_ NUM '-' '\n' '(' <EOF> }

    exp -> exp  . '+' exp   (rule 7)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '-' exp   (rule 8)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '*' exp   (rule 9)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '/' exp   (rule 10)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '^' exp   (rule 12)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    on '-':      shift, and go to state 11
    on '+':      shift, and go to state 12
    on '*':      shift, and go to state 13
    on '/':      shift, and go to state 14
    on '^':      shift, and go to state 15
    on '\n':     shift, and go to state 16

State 8 (inherited terminal: '(')

    exp -> '('  . exp ')'   (rule 13)
              Lookahead set { '-' '+' '*' '/' '^' '\n' ')' }

    All production rules (using dot == 0) of:
      exp     Lookahead set { '-' '+' '*' '/' '^' ')' }

    on NUM:      shift, and go to state 3
    on '-':      shift, and go to state 4
    on '(':      shift, and go to state 8
    on exp:      shift, and go to state 17

State 9 (inherited terminal: '\n')

    line -> errTok_ '\n'  .   (rule 5)
              Lookahead set { errTok_ NUM '-' '\n' '(' <EOF> }


    _default_:   reduce, using production
                5: line -> error '\n'

State 10 (inherited terminal: '-')

    exp -> '-' exp  .   (rule 11)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '+' exp   (rule 7)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '-' exp   (rule 8)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '*' exp   (rule 9)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '/' exp   (rule 10)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '^' exp   (rule 12)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    on '^':      shift, and go to state 15

    _default_:   reduce, using production
                11: exp -> '-' exp

    Actions suppressed by the default conflict resolution procedures:
    [on '^':      reduce, using production
                11: exp -> '-' exp]

State 11 (inherited terminal: '-')

    exp -> exp '-'  . exp   (rule 8)
              Lookahead set { '-' '+' '*' '/' '^' '\n' ')' }

    All production rules (using dot == 0) of:
      exp     Lookahead set { '-' '+' '*' '/' '^' '\n' }

    on NUM:      shift, and go to state 3
    on '-':      shift, and go to state 4
    on '(':      shift, and go to state 8
    on exp:      shift, and go to state 18

State 12 (inherited terminal: '+')

    exp -> exp '+'  . exp   (rule 7)
              Lookahead set { '-' '+' '*' '/' '^' '\n' ')' }

    All production rules (using dot == 0) of:
      exp     Lookahead set { '-' '+' '*' '/' '^' '\n' }

    on NUM:      shift, and go to state 3
    on '-':      shift, and go to state 4
    on '(':      shift, and go to state 8
    on exp:      shift, and go to state 19

State 13 (inherited terminal: '*')

    exp -> exp '*'  . exp   (rule 9)
              Lookahead set { '-' '+' '*' '/' '^' '\n' ')' }

    All production rules (using dot == 0) of:
      exp     Lookahead set { '-' '+' '*' '/' '^' '\n' }

    on NUM:      shift, and go to state 3
    on '-':      shift, and go to state 4
    on '(':      shift, and go to state 8
    on exp:      shift, and go to state 20

State 14 (inherited terminal: '/')

    exp -> exp '/'  . exp   (rule 10)
              Lookahead set { '-' '+' '*' '/' '^' '\n' ')' }

    All production rules (using dot == 0) of:
      exp     Lookahead set { '-' '+' '*' '/' '^' '\n' }

    on NUM:      shift, and go to state 3
    on '-':      shift, and go to state 4
    on '(':      shift, and go to state 8
    on exp:      shift, and go to state 21

State 15 (inherited terminal: '^')

    exp -> exp '^'  . exp   (rule 12)
              Lookahead set { '-' '+' '*' '/' '^' '\n' ')' }

    All production rules (using dot == 0) of:
      exp     Lookahead set { '-' '+' '*' '/' '^' '\n' }

    on NUM:      shift, and go to state 3
    on '-':      shift, and go to state 4
    on '(':      shift, and go to state 8
    on exp:      shift, and go to state 22

State 16 (inherited terminal: '\n')

    line -> exp '\n'  .   (rule 4)
              Lookahead set { errTok_ NUM '-' '\n' '(' <EOF> }


    _default_:   reduce, using production
                4: line -> exp '\n'

State 17 (inherited terminal: '(')

    exp -> '(' exp  . ')'   (rule 13)
              Lookahead set { '-' '+' '*' '/' '^' '\n' ')' }

    exp -> exp  . '+' exp   (rule 7)
              Lookahead set { '-' '+' '*' '/' '^' ')' }

    exp -> exp  . '-' exp   (rule 8)
              Lookahead set { '-' '+' '*' '/' '^' ')' }

    exp -> exp  . '*' exp   (rule 9)
              Lookahead set { '-' '+' '*' '/' '^' ')' }

    exp -> exp  . '/' exp   (rule 10)
              Lookahead set { '-' '+' '*' '/' '^' ')' }

    exp -> exp  . '^' exp   (rule 12)
              Lookahead set { '-' '+' '*' '/' '^' ')' }

    on '-':      shift, and go to state 11
    on '+':      shift, and go to state 12
    on '*':      shift, and go to state 13
    on '/':      shift, and go to state 14
    on '^':      shift, and go to state 15
    on ')':      shift, and go to state 23

State 18 (inherited terminal: '-')

    exp -> exp '-' exp  .   (rule 8)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '+' exp   (rule 7)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '-' exp   (rule 8)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '*' exp   (rule 9)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '/' exp   (rule 10)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '^' exp   (rule 12)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    on '*':      shift, and go to state 13
    on '/':      shift, and go to state 14
    on '^':      shift, and go to state 15

    _default_:   reduce, using production
                8: exp -> exp '-' exp

    Actions suppressed by the default conflict resolution procedures:
    [on '*':      reduce, using production
                8: exp -> exp '-' exp]
    [on '/':      reduce, using production
                8: exp -> exp '-' exp]
    [on '^':      reduce, using production
                8: exp -> exp '-' exp]

State 19 (inherited terminal: '+')

    exp -> exp '+' exp  .   (rule 7)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '+' exp   (rule 7)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '-' exp   (rule 8)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '*' exp   (rule 9)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '/' exp   (rule 10)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '^' exp   (rule 12)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    on '*':      shift, and go to state 13
    on '/':      shift, and go to state 14
    on '^':      shift, and go to state 15

    _default_:   reduce, using production
                7: exp -> exp '+' exp

    Actions suppressed by the default conflict resolution procedures:
    [on '*':      reduce, using production
                7: exp -> exp '+' exp]
    [on '/':      reduce, using production
                7: exp -> exp '+' exp]
    [on '^':      reduce, using production
                7: exp -> exp '+' exp]

State 20 (inherited terminal: '*')

    exp -> exp '*' exp  .   (rule 9)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '+' exp   (rule 7)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '-' exp   (rule 8)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '*' exp   (rule 9)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '/' exp   (rule 10)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '^' exp   (rule 12)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    on '^':      shift, and go to state 15

    _default_:   reduce, using production
                9: exp -> exp '*' exp

    Actions suppressed by the default conflict resolution procedures:
    [on '^':      reduce, using production
                9: exp -> exp '*' exp]

State 21 (inherited terminal: '/')

    exp -> exp '/' exp  .   (rule 10)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '+' exp   (rule 7)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '-' exp   (rule 8)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '*' exp   (rule 9)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '/' exp   (rule 10)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '^' exp   (rule 12)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    on '^':      shift, and go to state 15

    _default_:   reduce, using production
                10: exp -> exp '/' exp

    Actions suppressed by the default conflict resolution procedures:
    [on '^':      reduce, using production
                10: exp -> exp '/' exp]

State 22 (inherited terminal: '^')

    exp -> exp '^' exp  .   (rule 12)
              Lookahead set { '-' '+' '*' '/' '^' '\n' ')' }

    exp -> exp  . '+' exp   (rule 7)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '-' exp   (rule 8)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '*' exp   (rule 9)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '/' exp   (rule 10)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    exp -> exp  . '^' exp   (rule 12)
              Lookahead set { '-' '+' '*' '/' '^' '\n' }

    on '^':      shift, and go to state 15

    _default_:   reduce, using production
                12: exp -> exp '^' exp

    Actions suppressed by the default conflict resolution procedures:
    [on '^':      reduce, using production
                12: exp -> exp '^' exp]

State 23 (inherited terminal: ')')

    exp -> '(' exp ')'  .   (rule 13)
              Lookahead set { '-' '+' '*' '/' '^' '\n' ')' }


    _default_:   reduce, using production
                13: exp -> '(' exp ')'

